fixed Priceine bullet points and updated timeline alignment

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -13,7 +13,7 @@
   background-color: white;
   top: 0;
   bottom: 0;
-  left: 50%;
+  left: 0;
   margin-left: -3px;
 }
 
@@ -26,7 +26,7 @@
   padding: 10px 40px;
   position: relative;
   background-color: inherit;
-  width: 50%;
+  /* width: 50%; */
 }
 
 /* The circles on the timeline */
@@ -50,7 +50,7 @@
 
 /* Place the container to the right */
 .timeline-right {
-  left: 50%;
+  /* left: 50%; */
 }
 
 /* Add arrows to the left container (pointing right) */
